--- a/elements.html
+++ b/elements.html
@@ -364,14 +364,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/Geraldy_Leondas" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/geraldy-leondas-35265279/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.github.com/geraldy1st" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://dribbble.com/geraldy1st" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="mailto:geraldy.leondas@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; GERALDY</li>
+							<li> 2017 COPYRIGHT HOLDER ALL RIGHT RESERVED.</li>
 						</ul>
 					</footer>
 
