--- a/gee-bootstrap/demo.html
+++ b/gee-bootstrap/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Geraldy - Demo</title>
+  <title>G.L - Demo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#"><img src="img/gee1.png" class="logoG" alt="image"></a>
-                <a class="navbar-brand logoG1" href="#">DMGD</a>
+<!--                <a class="navbar-brand logoG1" href="index.html">DMGD</a>-->
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -69,7 +69,7 @@ We help individuals, startups, brands and corporations see what the future could
     </div>
        <div class="container">
          <div>
-         <img src="img/snow.png" alt="img">
+         <img style="width: 100%;" src="img/snow.png" alt="img">
           </div>
            
        </div>
