--- a/gee-bootstrap/spotygee.html
+++ b/gee-bootstrap/spotygee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spotify Gee</title>
+    <title>G.L Spotify</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400" rel="stylesheet">
 </head>
 <style>
