--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body class="landing">
         
        <div id="contactinfo">
-            <p id="contactme">+33619852444</p>
+            <p id="contactme">Hello world.</p>
         </div>
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -60,10 +60,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>The framework use for this site<br />
-								HTML5 CSS3 JS no vanila but pure coding accuracy</h2>
-								<p>throught this you may find so easter egg but you can see touch or feel<br />
-								my skills... a reminder for me to PS those damn pic</p>
+								<h2>The language use for this site<br />
+								HTML5 CSS3 JS </h2>
+								<p>you may find so easter egg but you can see touch or feel</p>
 							</header>
                             <ul id="framework">
                                 <li><img src="images/html5.png"/></li>
